Closed Bug 808358 Opened 13 years ago Closed 13 years ago

nsWindow.cpp:388:5: error: expected unqualified-id before ‘if’

Categories

(Core Graveyard :: Widget: Qt, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla19

People

(Reporter: romaxa, Assigned: romaxa)

Details

Attachments

(1 file)

Qt widget port fails to build on linux: c++ -o nsWindow.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include config/gcc_hidden.h -DMOZ_GLUE_IN_PROGRAM -DXPCOM_TRANSLATE_NSGM_ENTRY_POINT=1 -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -DEXCLUDE_SKIA_DEPENDENCIES -DOS_POSIX=1 -DOS_LINUX=1 -D_IMPL_NS_WIDGET -D_BSD_SOURCE -Iipc/chromium/src -Iipc/glue -I../../ipc/ipdl/_ipdlheaders -Iwidget/xpwidgets -Iwidget/qt/faststartupqt -Iwidget/qt -Iwidget/qt -I. -I../../dist/include -I/obj-ff-qt/dist/include/nspr -I/obj-ff-qt/dist/include/nss -Iwidget/qt/../shared/x11 -Iwidget/qt/../shared -fPIC -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wcast-align -Wno-long-long -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -Os -freorder-blocks -fno-omit-frame-pointer -DQT_SHARED -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtOpenGL -I/obj-ff-qt/dist/include/cairo -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/nsWindow.o.pp widget/qt/nsWindow.cpp widget/qt/nsWindow.cpp:388:5: error: expected unqualified-id before ‘if’ widget/qt/nsWindow.cpp:391:5: error: ‘mLayerManager’ does not name a type widget/qt/nsWindow.cpp:393:9: error: expected constructor, destructor, or type conversion before ‘(’ token widget/qt/nsWindow.cpp:398:5: error: expected unqualified-id before ‘for’ widget/qt/nsWindow.cpp:398:40: error: ‘kid’ does not name a type widget/qt/nsWindow.cpp:398:45: error: expected unqualified-id before ‘)’ token widget/qt/nsWindow.cpp:406:5: error: ‘mThebesSurface’ does not name a type widget/qt/nsWindow.cpp:410:5: error: expected unqualified-id before ‘if’ widget/qt/nsWindow.cpp: In member function ‘virtual nsresult nsWindow::Destroy()’: widget/qt/nsWindow.cpp:386:5: error: control reaches end of non-void function [-Werror=return-type] widget/qt/nsWindow.cpp: At global scope:
Assignee: nobody → romaxa
Status: NEW → ASSIGNED
Attachment #678085 - Flags: review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/affe99f69f83 ups, pushed with wrong patch header... :(, should be r=romaxa, DONTBUILD...
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: