 Bug 808358 - nsWindow.cpp:388:5: error: expected unqualified-id before if